# morphospaces

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: dataset.py  generate_single_branch_skeletons.py  pretrain_ssl.py
examples/pixel_embedding/: download_data.py  merge_point_annotations.py  predict_embedding.py  train_pixel_embedding_cli.py  train_swin_unetr_embedding_memory_lr.py  train_swin_unetr_embedding_mrc.py
examples/semantic_seg/: make_synthetic_data.py  train_semantic_multiscale.py  train_semantic_seg.py
examples/skeletonization/: split_datasets.py  train_multiscale_skeleton.py  train_multiscale_skeleton_lr.py  train_semantic_multiscale_skeleton.py  train_semantic_skeleton.py  train_sementic_points.py  train_skeleton.py
src/morphospace/: napari.yaml
src/morphospace/_tests/: test_sample_data.py
src/morphospaces/_tests/: test_widget.py
src/morphospaces/cli/: main.py  skeletonize_cli.py
src/morphospaces/data/: data_utils.py  skeleton.py
src/morphospaces/datasets/: __init__.py  _base.py  hdf5.py  mrc.py  utils.py  zarr.py
src/morphospaces/datasets/_tests/: test_hdf5.py  test_utils.py
src/morphospaces/io/: hdf5.py
src/morphospaces/logging/: image.py
src/morphospaces/losses/: embedding.py  regression.py  segmentation.py  skeletonization.py  ssl.py  util.py
src/morphospaces/losses/_tests/: test_embedding.py  test_skeletonization.py
src/morphospaces/losses/tests/: test_embedding.py
src/morphospaces/networks/: __init__.py  constants.py  multiscale_skeletonization.py  pixel_embedding.py  semantic_multiscale.py  semantic_swin_unetr.py  semantic_unet.py  skeletonization.py  ssl_vit.py  swin_unetr.py  unet.py  unetr.py  vit_autoencoder.py
src/morphospaces/networks/_components/: embedding_swin_unetr.py  memory_bank.py  ssl_vit.py  unet_blocks.py  unet_model.py
src/morphospaces/networks/_components/_tests/: test_memory_bank.py
src/morphospaces/training/: multiscale_skeletonization.py
src/morphospaces/transforms/: image.py  label.py  skeleton.py
