[metadata]
name = morphospaces
description = a library for creating  and exploring morphospaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/morphometrics/morphospaces
author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/morphometrics/morphospace/issues
    Documentation = https://github.com/morphometrics/morphospace#README.md
    Source Code = https://github.com/morphometrics/morphospace
    User Support = https://github.com/morphometrics/morphospace/issues

[options]
packages = find:
install_requires =
    dask
    h5py
    magicgui
    monai
    numpy
    pytorch-lightning
    qtpy
    scikit-image
    scipy
    tensorboard
    torch
    torchvision
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
